--- a/_config.yml
+++ b/_config.yml
@@ -62,18 +62,15 @@ author:
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "First-year Master's Student in Geography at Texas A&M."
   links:
-    - label: "Website"
+    - label: "Google Scholar"
       icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+      URL: ""
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://github.com/zShi1026"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/zhilin-shi-5149191a3/"
 
 footer:
   links:
