--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 logo: "/assets/images/site_logo.png"
+masthead_title: # my custom title
 title: Zhilin Shi
 email: zshi@tamu.edu
 description: >- # this means to ignore newlines until "baseurl:"
