--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-logo: "/assets/images/site_logo.png"
-masthead_title: # my custom title
-title: Zhilin Shi
+#logo: "/assets/images/site_logo.png"
+#masthead_title: # my custom title
+title: Z. S.
 email: zshi@tamu.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
