--- a/_config.yml
+++ b/_config.yml
@@ -17,12 +17,12 @@
 
 excerpt: "Hello"
 header:
-  overlay_image: /assets/images/unsplash-image-1.jpg
+  overlay_image: /assets/images/header_image.jpeg
   overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
-  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+  caption: "go go go"
   actions:
     - label: "More Info"
-      url: "https://unsplash.com"
+      url: ""
 
 
 
