--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@
 
 excerpt: "Hello"
 header:
-  overlay_image: /assets/images/header_image.jpeg
+  overlay_image: /assets/images/header_image.jpg
   overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
   caption: "go go go"
   actions:
